--- a/style.css
+++ b/style.css
@@ -4,7 +4,9 @@
     box-sizing: border-box;
 
 }
+
 html,body{
+    background-color: #222;
     height: 100%;
     width: 100%;
     overflow-x: hidden;
